application/brennoflavio/pihole/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole
  namespace: pihole
  labels:
    kubernetes.io/service-name: pihole
addressType: IPv4
ports:
  - name: http
    port: 8080
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.0.201
    conditions:
      ready: true
