application/brennoflavio/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
